# module-xmlsec

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  ChangeLog  Makefile.am  QC_XmlSecKey.cc  QC_XmlSecKey.h  QC_XmlSecKeyManager.cc  QC_XmlSecKeyManager.h  QoreXmlSecKeyDataFormatNode.h  README  RELEASE-NOTES  configure.ac  qore-xmlsec-module.spec  qore-xmlsec.h  reconf.sh  test-key.pem  test-xmlsec.q  xmlsec.cc
cmake/: FindXMLSec.cmake  config.h.cmake  find-libxslt.cmake  find-xmlsec.cmake
docs/: mainpage.dox.tmpl  xmlsec-module-doc.html
src/: DSigCtx.h  Makefile.am  QC_XmlSec.h  QC_XmlSec.qpp  QC_XmlSecKey.cc  QC_XmlSecKey.h  QC_XmlSecKey.qpp  QC_XmlSecKeyManager.cc  QC_XmlSecKeyManager.h  QC_XmlSecKeyManager.qpp  QoreXmlDoc.h  QoreXmlSecEncCtx.h  QoreXmlSecKeyDataIdNode.h  qore-xmlsec.h  xmlsec.cc  xmlsec.cpp
test/: test-cert.pem  test-xmlsec.q  xmlsec.qtest
test/docker_test/: test-alpine.sh  test-ubuntu.sh  test.sh
